--- a/styles/style.css
+++ b/styles/style.css
@@ -108,4 +108,25 @@ nav > a:hover {
   -webkit-transform: scale(1.25);
           transform: scale(1.25);
 }
+
+select, option, input {
+  background-color: transparent;
+  color: white;
+  font-family: 'Caveat', cursive;
+  font-size: 1.5rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 30vw;
+  height: 5vh;
+  min-width: 240px;
+  margin: 1%;
+}
+
+select:focus, option:focus, input:focus {
+  outline: none;
+}
+
+option {
+  color: black;
+}
 /*# sourceMappingURL=style.css.map */
