--- a/styles/style.scss
+++ b/styles/style.scss
@@ -88,3 +88,23 @@ nav > a:hover{
     transform: scale(1.25);
 }
 
+select, option, input{
+    background-color: transparent;
+    color: white;
+    font-family: 'Caveat', cursive;
+    font-size: 1.5rem;
+    box-sizing: border-box;
+    width: 30vw;
+    height: 5vh;
+    min-width: 240px;
+    margin: 1%;
+}
+
+select:focus, option:focus, input:focus{
+    outline: none;
+
+}
+
+option{
+    color: black;
+}
