--- a/styles/style.css
+++ b/styles/style.css
@@ -139,6 +139,14 @@ nav > a:hover {
   zoom: 200%;
 }
 
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100vw;
+  text-align: center;
+  margin-bottom: 1vh;
+}
+
 select:focus, option:focus, input:focus {
   outline: none;
 }
