--- a/styles/style.scss
+++ b/styles/style.scss
@@ -110,7 +110,13 @@ nav > a:hover{
     zoom: 200%;
 }
 
-
+footer{
+    position: absolute;
+    bottom: 0;
+    width: 100vw;
+    text-align: center;
+    margin-bottom: 1vh;
+}
 
 select:focus, option:focus, input:focus{
     outline: none;
