--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,15 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: 'IBM Plex Sans', sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 100%;
+  height: 100%;
 }
 
 body {
@@ -37,6 +46,7 @@ main {
       -ms-flex-align: center;
           align-items: center;
   margin-inline: 20vw;
+  margin-bottom: 5vh;
 }
 
 main > a {
@@ -140,11 +150,10 @@ nav > a:hover {
 }
 
 footer {
-  position: fixed;
-  bottom: 0;
+  margin-top: auto;
   width: 100vw;
   text-align: center;
-  margin-bottom: 1vh;
+  margin-bottom: 2vh;
 }
 
 select:focus, option:focus, input:focus {
