--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,6 +5,11 @@ body, html{
     margin: 0;
     padding: 0;
     font-family: 'IBM Plex Sans', sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    height: 100%;   
+
 }
 
 body{
@@ -25,6 +30,7 @@ main{
     flex-direction: column;
     align-items: center;
     margin-inline: 20vw;
+    margin-bottom: 5vh;
     // border: 1px solid white;
 }
 
@@ -111,11 +117,10 @@ nav > a:hover{
 }
 
 footer{
-    position: fixed;
-    bottom: 0;
+    margin-top: auto;
     width: 100vw;
     text-align: center;
-    margin-bottom: 1vh;
+    margin-bottom: 2vh;
 }
 
 select:focus, option:focus, input:focus{
