--- a/styles/style.scss
+++ b/styles/style.scss
@@ -108,7 +108,7 @@ nav > a:hover{
     font-size: 1.5rem;
     box-sizing: border-box;
     width: 30vw;
-    height: 5vh;
+    height: fit-content;
     min-width: 240px;
     margin: 2%;
 }
